# shruti

./: .gitignore  Makefile  README.md  bootstrap.sh  install.sh  pyproject.toml
shruti/: __init__.py  audio.py  cli.py  config.py  daemon.py  gemini.py  overlay.py  service.py  x11_insert.py
